# amazon-q-developer-cli

./: .gitignore
amazon-q-langchain-demo/: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  demo_basic.py  demo_mock.py  demo_structure.py  requirements.txt
amazon-q-langchain-demo/amazon_q_langchain/: __init__.py  chat_model.py  token_manager.py
amazon-q-langchain-demo/demo_apps/code_review_assistant/: pyproject.toml
amazon-q-langchain-demo/demo_apps/code_review_assistant/workflows/: code_review_workflow.py
amazon-q-langchain-demo/tests/: test_integration.py
crates/amazon-q-streaming-client-python/: README.md  example.py  setup.py
crates/amazon-q-streaming-client-python/amazon_q_streaming_client/: __init__.py  client.py  models.py
crates/amazon-q-streaming-client-python/amazon_q_streaming_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
crates/chat-cli/src/cli/: mod.rs  user.rs
docs/qinabox/: feature-external-auth-and-python-client.md  handover.md  how-to-integrate-q-externally.md
q-docker/: Dockerfile  README.md  mcp-servers.txt
q-docker/scripts/: install-mcp-servers.sh  q-docker.sh  startup.sh  test_q_cli.sh
